kubernetes/apps/default/miniflux/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniflux
  labels:
    app: miniflux
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: miniflux
  template:
    metadata:
      labels:
        app: miniflux
    spec:
      restartPolicy: Always
      containers:
        - name: miniflux-migration
          image: miniflux/miniflux:2.0.50
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command: ["CMD", "/usr/bin/miniflux", "-healthcheck", "auto"]
            initialDelaySeconds: 30
            periodSeconds: 10
          ports:
            - containerPort: 8080
              name: http
