kubernetes/apps/default/miniflux/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: miniflux
  labels:
    app: miniflux
spec:
  type: ClusterIP
  selector:
    app: miniflux
  ports:
    - name: http
      port: 8080
      targetPort: http
